# globex

./: .gitignore  Cargo.toml  README.md  justfile  rustfinity.json
.superpowers/brainstorm/95724-1773401374/: .server-info  layout.html
docs/: architecture.md
docs/superpowers/plans/: 2026-03-13-market-comparison-plan.md
docs/superpowers/specs/: 2026-03-13-market-comparison-design.md
globex-backend/: Cargo.toml  globex.db-shm  globex.db-wal
globex-backend/migrations/: 202603120000_init.sql  202603130001_market_data.sql
globex-backend/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  services.rs
globex-backend/src/models/: exchange.rs  quote.rs
globex-backend/src/services/: index_calculator.rs  market_collector.rs  registry.rs
globex-backend/tests/: api_tests.rs  health_check.rs
globex-frontend/: package.json  pnpm-lock.yaml
globex-frontend/src/app/: layout.tsx  page.tsx
globex-frontend/src/app/market/[id]/: page.tsx
globex-frontend/src/components/: FearGreedGauge.tsx  MarketCard.tsx  Top10Table.tsx
globex-frontend/src/services/: marketService.ts
src/: main.rs
