[package]
name = "globex-backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
yahoo_finance_api = "2.3"
backoff = { version = "0.4", features = ["tokio"] }
itertools = "0.14"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "globex-backend"
path = "src/main.rs"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http = "1.0"
axum = { version = "0.7", features = ["macros"] }

